# bildutforskaren

./: .gitignore  AGENTS.md  BUGS.md  README.md  api.py  fortepan_downloader.py  get_images.py  main.py  model_worker.py  pyproject.toml  requirements.txt  sao_terms.csv  sd.py  sprite_atlas.py  transform_images.py  word_crawler.py
.beads/: issues.jsonl
api/: anchor_analysis.py  app_factory.py  atlas.py  clip_service.py  cluster_previews.py  clustering.py  config.py  context.py  context_cache.py  dataset_db.py  datasets.py  graph_network.py  image_roundtrip.py  indexing.py  job_manager.py  jobs.py  legacy_metadata_xlsx.py  model_backends.py  models.py  routes_dataset_scoped.py  routes_datasets.py  routes_terms.py  runtime.py  sao_terms.py
deploy/: api.yaml  web.yaml
tests/: test_anchor_analysis.py  test_anchor_analysis_route.py  test_api.py  test_graph_network.py  test_graph_network_route.py
web/: .gitignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
web/src/: App.tsx  global.d.ts  index.css  main.tsx  state.tsx
web/src/app/: App.tsx
web/src/components/: CustomImageNode.tsx  DatasetPicker.tsx  DatasetStatusPanel.tsx  EmbeddingProgressBar.tsx  EmbeddingsCanvas.tsx  Image.tsx  StatusMessage.tsx
web/src/features/canvas/: CanvasScene.tsx  Panel.tsx  Umap3DScene.tsx  ViewPort.tsx  anchorAnalysisPaths.ts  canvasState.tsx  constants.ts  index.tsx  utils.ts
web/src/features/canvas/components/: AnchorAnalysisOverlay.tsx  AnchorAnalysisTray.tsx  EmbeddingsLayer.tsx  GraphNetworkLayer.tsx  HUD.tsx  Minimap.tsx  TagResultsPanel.tsx  TaggerPanel.tsx
web/src/features/canvas/hooks/: useAnchorAnalysis.ts  useAtlasLoader.ts
web/src/features/datasets/: api.ts
web/src/features/datasets/components/: DatasetPicker.tsx  DatasetStatusPanel.tsx  EmbeddingProgressBar.tsx
web/src/features/datasets/hooks/: useDatasetStatus.ts
web/src/features/datasets/pages/: DatasetPage.tsx  DatasetsIndexPage.tsx
web/src/features/datasets/types/: datasets.ts
web/src/features/images/pages/: ImagePage.tsx
web/src/features/streetview/: Map.tsx  index.tsx
web/src/hooks/: useDatasetStatus.ts
web/src/lib/: api.ts
web/src/pages/: Dataset.tsx  Image.tsx  Maps.tsx  MapsPage.tsx  index.tsx
web/src/pages/canvas/: CanvasScene.tsx  Panel.tsx  canvasLogic.test.ts  canvasState.tsx  constants.ts  index.tsx  types.ts  utils.ts
web/src/pages/canvas/components/: EmbeddingsLayer.tsx  HUD.tsx  Minimap.tsx  SelectionRect.tsx  TagResultsPanel.tsx  TaggerPanel.tsx
web/src/pages/canvas/hooks/: useAtlasLoader.ts
web/src/pages/streetview/: Map.tsx  index.tsx
web/src/shared/components/: HomeLogoLink.tsx  Image.tsx  StatusMessage.tsx
web/src/shared/lib/: api.ts  photoViewer.ts
web/src/store/: index.tsx
web/src/types/: datasets.ts
