[project]
name = "bildutforskaren"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.6.0",
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cmake==4.0.0",
    "compel==2.1.1",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "diffusers==0.33.1",
    "einops==0.8.1",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.3.1",
    "faiss-cpu==1.10.0",
    "fastapi==0.115.12",
    "filelock==3.18.0",
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "fonttools==4.57.0",
    "fsspec==2025.3.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "llvmlite==0.44.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "ninja==1.11.1.4",
    "numba==0.61.2",
    "numpy==2.2.4",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "psutil==7.0.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pynndescent==0.5.13",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "six==1.17.0",
    "starlette==0.46.2",
    "sympy==1.13.3",
    "threadpoolctl==3.6.0",
    "timm==1.0.15",
    "tokenizers==0.21.1",
    "tqdm==4.67.1",
    "transformers==4.51.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "umap-learn==0.5.7",
    "urllib3==2.4.0",
    "uvicorn==0.34.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "zipp==3.21.0",
]

[project.optional-dependencies]
cuda = [
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
]
cpu = [
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cuda" },
        { extra = "cpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", extra = "cuda" },
    { index = "pytorch-cpu", extra = "cpu" },
]
torchaudio = [
    { index = "pytorch-cu130", extra = "cuda" },
    { index = "pytorch-cpu", extra = "cpu" },
]
torchvision = [
    { index = "pytorch-cu130", extra = "cuda" },
    { index = "pytorch-cpu", extra = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
